--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,12 +1,12 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="text_size_18_dp">18dp</dimen>
-    <dimen name="text_size_17_dp">17dp</dimen>
-    <dimen name="text_size_16_dp">16dp</dimen>
-    <dimen name="text_size_15_dp">15dp</dimen>
-    <dimen name="text_size_14_dp">14dp</dimen>
-    <dimen name="text_size_13_dp">13dp</dimen>
-    <dimen name="text_size_12_dp">12dp</dimen>
-    <dimen name="text_size_11_dp">11dp</dimen>
-    <dimen name="text_size_10_dp">10dp</dimen>
+    <dimen name="text_size_18_sp">18sp</dimen>
+    <dimen name="text_size_17_sp">17sp</dimen>
+    <dimen name="text_size_16_sp">16sp</dimen>
+    <dimen name="text_size_15_sp">15sp</dimen>
+    <dimen name="text_size_14_sp">14sp</dimen>
+    <dimen name="text_size_13_sp">13sp</dimen>
+    <dimen name="text_size_12_sp">12sp</dimen>
+    <dimen name="text_size_11_sp">11sp</dimen>
+    <dimen name="text_size_10_sp">10sp</dimen>
 </resources>
