--- a/app/src/main/res/drawable/shape_title_bar_bottom_line.xml
+++ b/app/src/main/res/drawable/shape_title_bar_bottom_line.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:angle="90"
-        android:endColor="#C8C8C8"
-        android:startColor="#F5F5F5" />
+        android:endColor="#E0E0E0"
+        android:startColor="#F8F8F8" />
 </shape>
