--- a/app/src/main/res/layout/activity_base_title_bar.xml
+++ b/app/src/main/res/layout/activity_base_title_bar.xml
@@ -84,6 +84,7 @@
     </android.support.design.widget.AppBarLayout>
 
     <View
+        android:id="@+id/bottom_line"
         android:layout_width="match_parent"
         android:layout_height="2dp"
         android:background="@drawable/shape_title_bar_bottom_line" />
