修复title字体大小不准确问题，添加title高度可设置功能 Commit By Parck.

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,13 @@
     <dimen name="text_size_12_sp">12sp</dimen>
     <dimen name="text_size_11_sp">11sp</dimen>
     <dimen name="text_size_10_sp">10sp</dimen>
+
+    <dimen name="title_height_46_dp">46dp</dimen>
+    <dimen name="title_height_47_dp">47dp</dimen>
+    <dimen name="title_height_48_dp">48dp</dimen>
+    <dimen name="title_height_49_dp">49dp</dimen>
+    <dimen name="title_height_50_dp">50dp</dimen>
+    <dimen name="title_height_51_dp">51dp</dimen>
+    <dimen name="title_height_52_dp">52dp</dimen>
+
 </resources>
