--- a/app/src/main/res/layout/activity_base_title_bar.xml
+++ b/app/src/main/res/layout/activity_base_title_bar.xml
@@ -6,7 +6,7 @@
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="48dp">
+        android:layout_height="wrap_content">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/tool_bar"
@@ -15,9 +15,9 @@
             android:background="@color/default_title_bar_color">
 
             <RelativeLayout
+                android:id="@+id/title_layout"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginRight="15dp">
+                android:layout_height="48dp">
 
                 <ImageView
                     android:id="@+id/left_button"
