--- a/app/src/main/res/layout/activity_base_title_bar.xml
+++ b/app/src/main/res/layout/activity_base_title_bar.xml
@@ -1,39 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
     <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/tool_bar"
-            android:layout_width="match_parent"
+            style="@style/TitleBarTheme"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:background="@color/default_title_bar_color">
+            android:background="@color/default_title_bar_color"
+            android:contentInsetLeft="0dp"
+            android:contentInsetRight="0dp"
+            android:contentInsetStart="0dp"
+            app:contentInsetLeft="0dp"
+            app:contentInsetRight="0dp"
+            app:contentInsetStart="0dp">
 
             <RelativeLayout
                 android:id="@+id/title_layout"
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="48dp">
 
                 <ImageView
                     android:id="@+id/left_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:padding="5dp" />
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="15dp"
+                    android:clickable="true" />
 
                 <TextView
                     android:id="@+id/left_button_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:layout_marginLeft="10dp"
-                    android:padding="5dp"
+                    android:layout_marginLeft="15dp"
+                    android:clickable="true"
+                    android:includeFontPadding="false"
+                    android:paddingBottom="5dp"
+                    android:paddingTop="5dp"
                     android:textColor="@color/default_text_color"
-                    android:textSize="14sp"
                     android:visibility="gone" />
 
                 <TextView
@@ -43,6 +55,7 @@
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="15dp"
                     android:layout_toRightOf="@id/left_button"
+                    android:clickable="true"
                     android:padding="5dp"
                     android:textColor="@color/default_text_color"
                     android:textSize="16sp"
@@ -53,7 +66,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
-                    android:layout_marginLeft="15dp"
+                    android:clickable="true"
                     android:padding="5dp"
                     android:textColor="@color/default_text_color"
                     android:textSize="16sp"
@@ -64,7 +77,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
-                    android:padding="5dp"
+                    android:layout_marginRight="15dp"
+                    android:clickable="true"
                     android:visibility="gone" />
 
                 <TextView
@@ -73,8 +87,10 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:layout_marginLeft="15dp"
-                    android:padding="5dp"
+                    android:clickable="true"
+                    android:paddingBottom="5dp"
+                    android:paddingRight="15dp"
+                    android:paddingTop="5dp"
                     android:textColor="@color/default_text_color"
                     android:textSize="14sp"
                     android:visibility="gone" />
