--- a/app/src/main/res/layout/activity_base_title_bar.xml
+++ b/app/src/main/res/layout/activity_base_title_bar.xml
@@ -6,14 +6,14 @@
     android:orientation="vertical">
 
     <android.support.design.widget.AppBarLayout
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/tool_bar"
             style="@style/TitleBarTheme"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
             android:background="@color/default_title_bar_color"
             android:contentInsetLeft="0dp"
             android:contentInsetRight="0dp"
@@ -24,8 +24,8 @@
 
             <RelativeLayout
                 android:id="@+id/title_layout"
-                android:layout_width="fill_parent"
-                android:layout_height="48dp">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
                 <ImageView
                     android:id="@+id/left_button"
