--- a/app/src/main/res/layout/activity_base_title_bar.xml
+++ b/app/src/main/res/layout/activity_base_title_bar.xml
@@ -66,6 +66,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
+                    android:layout_centerVertical="true"
                     android:clickable="true"
                     android:padding="5dp"
                     android:textColor="@color/default_text_color"
@@ -77,6 +78,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
                     android:layout_marginRight="15dp"
                     android:clickable="true"
                     android:visibility="gone" />
