--- a/app/src/main/res/layout/fragment_base_title_bar.xml
+++ b/app/src/main/res/layout/fragment_base_title_bar.xml
@@ -60,6 +60,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
             android:layout_marginRight="15dp"
             android:clickable="true"
             android:visibility="gone" />
