--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="default_text_color">#585858</color>
     <color name="default_title_bar_color">#FFFFFF</color>
+    <color name="default_background_color">#F7F7F7</color>
 </resources>
